[gd_scene load_steps=3 format=3 uid="uid://bottp5kkuetoa"]

[ext_resource type="Script" path="res://addons/FeagiIntegration/Editor/Panel/Components/InputSequences/Editor_FEAGI_UI_Panel_InputSequenceElement.gd" id="1_h6jvu"]
[ext_resource type="PackedScene" uid="uid://cb22ijds17kmj" path="res://addons/FeagiIntegration/Editor/Panel/Components/Devices/Device_Specific_UIs/EmuInputConfigurations/EmuInputsConfiguration/Editor_FEAGI_UI_Panel_EmuInputConfiguration.tscn" id="2_neb35"]

[node name="EditorFeagiUiPanelInputSequenceElement" type="MarginContainer"]
offset_right = 52.0
offset_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4
script = ExtResource("1_h6jvu")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Step1_type" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Delay" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Step1_type"]
layout_mode = 2
text = "Delay"

[node name="Input" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Step1_type"]
layout_mode = 2
text = "Input"

[node name="AddBefore" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Add Input Before
"

[node name="Step2_Delay" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Step2_Delay"]
layout_mode = 2
text = "Delay before next step"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Step2_Delay"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Step2_Delay/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Delay (seconds):"

[node name="SpinBox" type="SpinBox" parent="PanelContainer/MarginContainer/VBoxContainer/Step2_Delay/HBoxContainer"]
layout_mode = 2
min_value = 0.1
max_value = 60.0
step = 0.1
value = 0.1
alignment = 1

[node name="Step2_Input" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="EditorFeagiUiPanelEmuInputConfiguration" parent="PanelContainer/MarginContainer/VBoxContainer/Step2_Input" instance=ExtResource("2_neb35")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Step2_Input"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Step2_Input/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Hold length (seconds):"

[node name="SpinBox" type="SpinBox" parent="PanelContainer/MarginContainer/VBoxContainer/Step2_Input/HBoxContainer"]
layout_mode = 2
min_value = 0.1
max_value = 60.0
step = 0.1
value = 0.1
alignment = 1
